fixed pg error + page break when shares are too long - added some css to errors

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -763,6 +763,16 @@ aside {
   }
 }
 
+#alert-inline {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+#inline {
+  margin-left: -10px;
+  margin-bottom: 5px;
+}
+
 .field_with_errors {
   @extend .control-group;
   @extend .error;
